--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.5.0",
     "autoprefixer": "^10.4.17",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.2.0",
-    "gh-pages": "^6.0.0"
+    "vite": "^5.2.0"
   }
 }
