Update: KML fix, map behavior, index.html cleanup, deployment config

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
-node_modules
+# dependencies
+node_modules/
+
+# production build
+dist/
+
+# environment variables
+.env
+.env.*.local
+
+# local dev logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# VSCode settings
+.vscode/
+
+# system files
+.DS_Store
+Thumbs.db
+
+# optional lockfiles (uncomment if not using)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
