--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
@@ -42,7 +40,6 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.5.0",
     "autoprefixer": "^10.4.17",
-    "gh-pages": "^6.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^5.2.0"
