--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "noxfill",
+  "name": "knoxville",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "postbuild": "node generate-sitemap.js",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -41,6 +42,7 @@
     "@vitejs/plugin-react": "^4.5.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
+    "sitemap-generator": "^8.5.1",
     "tailwindcss": "^3.4.1",
     "vite": "^5.2.0"
   }
