updated:package.json,index.html,add:generate-sitemap.cjs and robots.txt,deleted:generate-sitemap.js

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "postbuild": "node generate-sitemap.js",
+    "postbuild": "node generate-sitemap.cjs",
     "preview": "vite preview"
   },
   "dependencies": {
