add all the files in the backend,added:studentCard.jsx,dashboard.jsx,protectedRoute.jsx,Login.jsx,api.jsx, n the fotend , modified:childsponsorship.jsx,app.jsx,index.css,.env,package.json,package-lock.json,navbar.jsx

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-// In CoverageMap.jsx
-const LEAFLET_CSS = import.meta.env.VITE_LEAFLET_CSS;
-const OMNIVORE_JS = import.meta.env.VITE_OMNIVORE_JS;
+# ─── Backend API Base URL ──────────────────────────────────
+# Used in axios/fetch calls to avoid hardcoded URLs
+REACT_APP_API_BASE_URL=http://localhost:5000
+
+# ─── App Metadata (optional) ───────────────────────────────
+REACT_APP_NAME=Anointed Vessels Admin
+REACT_APP_VERSION=1.0.0
