--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^8.18.0",
     "@react-three/postprocessing": "^2.19.1",
     "@vis.gl/react-google-maps": "^1.5.2",
+    "axios": "^1.12.2",
     "framer-motion": "^10.18.0",
     "leaflet": "^1.9.4",
     "leaflet-kml": "^1.0.1",
